# vcftool

./: .gitignore  .pre-commit-config.yaml  README.md  example_output.csv  pyproject.toml  setup.cfg
src/vcftool/: __main__.py  batch.py  exac.py  panda_style.py  stream.py  types.py  vcfparse.py  vcftypes.py
tests/: sample.vcf  test_annotate_e2e.py  test_chunked.py  test_consequence.py  test_parse.py
