[metadata]
name = vcftool
version = 0.1.0
description = Variant annotation tool

[options]
python_requires = >=3.9
package_dir=
   =src
packages=find:
install_requires =
   requests

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
   vcf-annotate = vcftool.__main__:main

[options.extras_require]
test =
   pytest
dev =
   pre-commit
